--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,7 @@
+$body-bg:  #1abc9c;
+$navbar-inverse-bg:  #16a085;
+$navbar_inverse-link-color: white;
+$brand-primary: #3498db;
+$jumbotron-bg: #ecf0f1;
+
 @import 'bootstrap';
