--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>About Artism</h1>
-<p>Currently working on Artism app 2015!</p>
+<h1>About Pinteresting</h1>
+<p>Currently working on Mock app 2015!</p>
