--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron center">
-     <h1>Pinterest Mock app</h1>
+     <h1>Alex sample app</h1>
      <p>
-       <%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
-       <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %>
+       <%= link_to "Log in ", "#", class: "btn btn-default btn-lg" %>
+       <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
   </p>    
 </div>
