--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron center">
      <h1>Welcome to my app!</h1>
      <% if user_signed_in? %>
-          # do something
+          # Thank you for signing in. Welcome to the inside of the app! :)
      <% else %>
        <p>
          <%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
