--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+@import url("http://fonts.googleapis.com/css?family=Lato:400,700");
 
 $body-bg:                                                   #ecf0f1;
 $font-family-sans-serif:                'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -8,6 +8,7 @@ $navbar-default-brand-color:      #c0392b;
 $brand-primary:   #c0392b;
 $jumbotron-bg:  white;
 
+@import "bootstrap-sprockets";
 @import 'bootstrap';
 
 .center {
